# data-science-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
docs/: changelog.md  contributing.md  examples.md  getting_started.md  index.md  install.md
docs/api_reference/: automl.md  feature.md  index.md  metrics.md  model.md
docs/user_guide/: automl.md  feature_engineering.md  index.md  interpretability.md  metrics_and_plots.md  model_analysis.md
dstoolkit/automl/: __init__.py  analysis.py  classifier.py  regressor.py  utils.py
dstoolkit/feature_engine/: __init__.py  lags.py  wrapper.py
dstoolkit/feature_engineering/: __init__.py
dstoolkit/models/: __init__.py  analysis.py  metrics.py
dstoolkit/nlp/: __init__.py
notebooks/: automl_gaussian_mixture.ipynb  automl_general_classifier.ipynb  automl_general_clustering.ipynb  automl_general_regressor.ipynb  automl_histgradientboosting.ipynb  automl_kmeans.ipynb  automl_lgbm_regressor.ipynb  grouped_lag_features.ipynb  lag_features.ipynb  lag_features_tests.ipynb  simple_lag_features.ipynb  word_cosine_distance_summarizer.ipynb  word_frequency_summarizer.ipynb
notebooks/classifier/: automl_catboost.ipynb  automl_catboost_classifier.ipynb  automl_hist_gradient_boosting.ipynb  automl_histgradientboosting_classifier.ipynb  automl_lightgbm.ipynb
notebooks/clustering/: automl_kmeans.ipynb
notebooks/feature_monitoring/: monitoring.ipynb
notebooks/feature_selection/: feature_selector.ipynb
notebooks/model_analysis/: classifier_analysis.ipynb
src/dstoolkit/: __init__.py
(+226 files in other folders)
