[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dstoolkit"
version = "0.9.2"
description = "Data Science Toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Clébio Júnior", email = "clebiomojunior@gmail.com" }
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "lightgbm==4.6.0",
    "catboost==1.2.8",
    "numba==0.62.1",
    "llvmlite==0.45.1",
    "umap-learn>=0.5.6",
    "pytest>=9.0.2",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"